istio/amine-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: amine-webapp-service-istio-v1
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: amine-webapp-deployment-istio-v1
---
apiVersion: v1
kind: Service
metadata:
  name: amine-webapp-service-istio-v2
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: amine-webapp-deployment-istio-v2
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: amine-webapp-deployment-istio-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: amine-webapp-deployment-istio-v1
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: amine-webapp-deployment-istio-v1
        version: v1
    spec:
      containers:
      - name: redis-server
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
      
      - name: webapp
        image: fuzzer/ece_devops_webapp:latest
        ports:
        - containerPort: 3000
        

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: redis-data-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amine-webapp-deployment-istio-v2
  labels:
    version: v2
spec:
  selector:
    matchLabels:
      app: amine-webapp-deployment-istio-v2
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: amine-webapp-deployment-istio-v2
        version: v2
    spec:
      containers:
      - name: redis-server
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
      
      - name: webapp
        image: fuzzer/ece_devops_webapp:latest
        ports:
        - containerPort: 3000
        

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: redis-data-claim
